# app/static/swagger.yaml
@@ -1251,20 +1251,43 @@ paths:
       tags:
         - Service Types
       summary: "Gets all Service Types in database"
-      description: "Endpoint to retrieve all Service Types in the database"
+      description: "Endpoint to retrieve all Service Types with pagination support"
       consumes:
         - application/json
       produces:
         - application/json
+      parameters:
+        - name: page
+          in: query
+          type: integer
+          required: false
+          description: "Page number (default: 1)"
+        - name: per_page
+          in: query
+          type: integer
+          required: false
+          description: "Number of items per page (default: 10)"
       responses:
         200:
-          description: "List of service types"
+          description: "List of service types with pagination"
           schema:
-            type: array
-            items:
-              $ref: "#/definitions/CreateServiceTypeResponse"
+            type: object
+            properties:
+              page:
+                type: integer
+              per_page:
+                type: integer
+              total_service_types:
+                type: integer
+              service_types:
+                type: array
+                items:
+                  $ref: "#/definitions/CreateServiceTypeResponse"
           examples:
             application/json:
+              page: 1
+              per_page: 10
+              total_service_types: 2
               service_types:
                 - id: 1
                   description: null
